<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="languageISO">en</string>
    <string name="app_name">MEMDroid</string>
    <string name="loginButton">Login</string>
    <string name="logoutButton">Logout</string>
    <string name="username">isch</string>
	<string name="password">u7jER76j</string>
    <!--
    <string name="password">webService1</string>
    <string name="username">webservice</string>
    -->
    <string name="mainListButtonCaption">List of Studies</string>
    <string name="mainSearchPatientButtonCaption">Search Patient</string>
    <string name="menuPatient">Patient</string>
    <string name="menuStudies">Studies</string>
    <string name="patientNewButtonCaption">New Patient</string>
    <string name="patientSearchButtonCaption">Search Patient</string>
    <string name="patientNewSubmitButtonCaption">Save Patient</string>
    <string name="selectDepartment">Please select your department</string>
    <string name="departmentDialogTitle">Choose Department</string>
    <string name="loginDialogTitle">Please login</string>
    <string name="select">Confirm selection</string>
    <string name="usernameLabel">Username</string>
    <string name="passwordLabel">Password</string>
    <string name="formSaveButtonCaption">Save Form</string>
    <string name="noPatientText">You have not selected a patient, please do so before choosing a study.</string>
    <string name="buttonOkay">Okay</string>
    <string name="patientSelected">Patient selected</string>
</resources>
